refactor and add detecor language

--- a/package.json
+++ b/package.json
@@ -51,6 +51,13 @@
   },
   "jest": {
     "preset": "react-native",
+    
+    "setupFiles": [
+      "<rootDir>/testSetup.js"
+    ],
+    "transformIgnorePatterns": [
+      "node_modules/(?!(@react-native|react-native|react-native-iphone-x-helper|react-native-shimmer-placeholder|react-navigation|@react-navigation/.*|react-native-linear-gradient|react-native-progress|react-native-raw-bottom-sheet|@react-native-voice/voice|@types/react-native-vector-icons|react-native-vector-icons)/)"
+    ],
     "moduleFileExtensions": [
       "ts",
       "tsx",
