--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "react-native start",
     "adb": "adb reverse tcp:8081 tcp:8081",
     "test": "jest",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "prettier": "npx prettier --write \"**/*.{js,jsx,ts,tsx,json}\" && npx prettier --write \"*.{js,jsx,ts,tsx,json}\""
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.18.1",
@@ -17,7 +18,9 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
+    "eslint-config-prettier": "^8.8.0",
     "i18next": "^22.5.0",
+    "prettier": "^2.8.8",
     "react": "18.1.0",
     "react-i18next": "^12.3.1",
     "react-native": "0.70.6",
@@ -51,7 +54,6 @@
   },
   "jest": {
     "preset": "react-native",
-    
     "setupFiles": [
       "<rootDir>/testSetup.ts"
     ],
