--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native": "0.70.6",
     "react-native-gesture-handler": "2.9.0",
     "react-native-linear-gradient": "^2.6.2",
+    "react-native-progress": "^5.0.0",
     "react-native-reanimated": "^3.1.0",
     "react-native-safe-area-context": "^4.5.3",
     "react-native-safe-area-view": "^1.1.1",
