--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@react-navigation/stack": "^6.3.16",
     "eslint-config-prettier": "^8.8.0",
     "i18next": "^22.5.0",
+    "lottie-ios": "^3.4.0",
+    "lottie-react-native": "^5.1.6",
     "prettier": "^2.8.8",
     "react": "18.1.0",
     "react-i18next": "^12.3.1",
