--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "18.1.0",
     "react-i18next": "^12.3.1",
     "react-native": "0.70.6",
+    "react-native-circular-progress-indicator": "^4.4.2",
     "react-native-gesture-handler": "2.9.0",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-progress": "^5.0.0",
